css/common.css
/* Text styles */
.action_small {
  font-family: "Montserrat";
  font-size: 12px;
  font-weight: 600;
  line-height: 130%;
  letter-spacing: 0.6px;
  text-transform: uppercase;
}

.action_large {
  font-family: "Montserrat";
  font-size: 24px;
  font-weight: 600;
  line-height:  152%;
  letter-spacing:  3.84px;
  text-transform: uppercase;
}

.font_caption {
  font-family: "Allura";
  font-size: 24px;
  font-weight: 400;
  line-height: 100%;
  letter-spacing: 1.2px;
}

.font_h1 {
  font-family: "Montserrat";
  font-size: 32px;
  font-weight: 600;
  line-height: 150%;
  letter-spacing: 5.86px;
  text-transform: uppercase;
}

.font_h2 {
  font-family: "Montserrat";
  font-size: 24px;
  font-weight: 600;
  line-height: 152%;
  letter-spacing: 3.84px;
  text-transform: uppercase;
}

.font_h3 {
  font-family: "Montserrat";
  font-size: 16px;
  font-weight: 600;
  line-height: 152%;
  letter-spacing: 1.28px;
  text-transform: uppercase;
}

.font_h4 {
  font-family: "Montserrat";
  font-size: 12px;
  font-weight: 600;
  line-height: 130%;
  letter-spacing: 0.6px;
  text-transform: uppercase;
}

.font_p {
  font-family: "Montserrat";
  font-size: 16px;
  font-weight: 400;
  line-height:  148%;
}

p {
  margin: 0;
}

h1, h2, h3, h4 {
  margin: 0;
}

button {
  all: unset;
}

body {
  scrollbar-gutter: stable;
}

html {
  scrollbar-gutter: stable;
}

